@@ -4,8 +4,8 @@ var Prototype = {
   Version: '<%= PROTOTYPE_VERSION %>',
   
   Browser: {
-    IE:     !!(window.attachEvent && !window.opera),
-    Opera:  !!window.opera,
+    IE:     window.attachEvent && navigator.userAgent.indexOf('Opera') == -1,
+    Opera:  navigator.userAgent.indexOf('Opera') > -1,
     WebKit: navigator.userAgent.indexOf('AppleWebKit/') > -1,
     Gecko:  navigator.userAgent.indexOf('Gecko') > -1 && navigator.userAgent.indexOf('KHTML') == -1,
     MobileSafari: !!navigator.userAgent.match(/Apple.*Mobile.*Safari/)
